--- a/BAAS_importer/params.ini
+++ b/BAAS_importer/params.ini
@@ -1,5 +1,11 @@
 [BAAS]
 # data.gouv.fr dataset ID: relates to BAAS dataset
 DataGouvID          = 53698f4ca3a729239d2036df
+# postgres database host
+Host                = srv-pgdata
+# postgres port
+Port                = 5432
+# postgres database
+Base                = d_mobilite
 # postgres database destination schema
 Schema              = d_mobilite
