--- a/BAAS_importer/postgres_credentials_template.ini
+++ b/BAAS_importer/postgres_credentials_template.ini
@@ -1,13 +1,13 @@
-# this file is a template
-# edit according your needs
-# and rename as postgres_credentials.ini
-
-# credentials for user 1
-[user_1]
-user = user_1
-password = password_1
-
-# credentials for user 2
-[user_2]
-user = user_2
-password = password_2
+[server]
+# postgres database host
+Host                = <valid host here>
+# postgres port
+Port                = <valid port here>
+# postgres database
+Base                = <valid base here>
+[user 1]
+user = <valid user here>
+password = <valid pw here>
+[user 2]
+user = <valid user here>
+password = <valid pw here>
